--- a/src/components/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/Profile/MyPosts/Post/Post.module.css
@@ -2,8 +2,9 @@
   margin: 15px 0;
   padding: 20px;
   border-radius: 5px;
-  color: greenyellow;
-  background-color: #777777;
+  color: white;
+  background-color: #333333;
+  border: #eeeeee 1px solid;
 }
 
 .user img {
