--- a/src/components/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/Profile/MyPosts/Post/Post.module.css
@@ -2,8 +2,8 @@
   margin: 15px 0;
   padding: 20px;
   border-radius: 5px;
-  color: white;
-  background-color: #333333;
+  color: rgba(0, 0, 0, 1);
+  background-color: rgba(255,255,255, 0.5);
   border: #eeeeee 1px solid;
 }
 
