--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -5,6 +5,7 @@
     margin-top: 5px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     border-radius: 5px;
 }
 
@@ -14,3 +15,7 @@
     border-radius: 15px;
 }
 
+.loginBlock a{
+    padding-right: 25px;
+    color: white;
+}
