--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 .app-wrapper {
     margin: 0 auto;
     display: grid;
-    width: 1100px;
+    width: 70%;
     grid-template-areas: "h h" "n c";
 
     grid-template-rows: 60px 1fr;
@@ -24,5 +24,33 @@
     padding: 10px;
 
 }
+@media (max-width: 1200px) {
+    .app-wrapper{
+        width: 80%
+    }
+    .app-wrapper-content{
+        padding: 8px;
+    }
+}
+
+@media (max-width: 960px) {
+    .app-wrapper{
+        width: 90%
+    }
+    .app-wrapper-content{
+        padding: 6px;
+    }
+}
+
+@media (max-width: 787px) {
+    .app-wrapper{
+        width: 98%
+    }
+    .app-wrapper-content{
+        padding: 4px;
+    }
+}
+
+
 
 
