--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -10,12 +10,16 @@
 }
 
 .header img {
-    width: 60px;
+    width: 40px;
+    height: 40px;
     margin-left: 10px;
-    border-radius: 15px;
+    border-radius: 50%;
 }
 
 .loginBlock a{
     padding-right: 25px;
     color: white;
+}
+.loginBlock{
+    margin-right: 15px;
 }
