--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -32,3 +32,12 @@
     border-radius: 3px;
     background-color: #777777;
 }
+
+@media (max-width: 787px) {
+    .nav {
+        padding: 7px;
+        margin-right: 5px;
+        border-radius: 5px;
+        font-size: 16px;
+    }
+}
