--- a/src/components/Dialogs/AddMessageForm/AddMessageForm.module.css
+++ b/src/components/Dialogs/AddMessageForm/AddMessageForm.module.css
@@ -1,15 +1,15 @@
-form{
-    width: 100%;
-    display: flex;
-    align-items: center;
-}
-form input{
-    width: 88%;
-    font-size: 17px;
-    outline: none;
-    padding: 5px 15px;
-    color: black;
-    border-radius: 15px;
-    border: black 0.1px solid;
-    background-color: gray;;
-}
+/*form{*/
+/*    width: 100%;*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*}*/
+/*form input{*/
+/*    width: 88%;*/
+/*    font-size: 17px;*/
+/*    outline: none;*/
+/*    padding: 5px 15px;*/
+/*    color: black;*/
+/*    border-radius: 15px;*/
+/*    border: black 0.1px solid;*/
+/*    background-color: gray;;*/
+/*}*/
